--- a/Desktop/rosie-cv/contact.html
+++ b/Desktop/rosie-cv/contact.html
@@ -45,9 +45,29 @@
             </div>
         </div>
     </header>
-    <section>
-        
+    <section class="container-fluid">
+        <div class="row bg-color-contact">
+            <div class="col">
+                <h3 class="contact-heading upper text-center">Got a projet in mind</h3>
+                <h5 class="uppercase text-center">Let´s work together</h5>
 
+                <div class="center-form">
+                    <form>
+                        <input type="text" name="name" id="fullname" class="form-control" placeholder="Name"
+                        reduired/>
+                        <input type="email" name="email" id="fullname" class="form-control" placeholder="Email"
+                        reduired/>
+                        <textarea rows="5" name="projectsummary" id="projectsummary" class="form-control" 
+                        placeholder="Project description" reduired></textarea>
+                        <div class="form-row text-center">
+                            <div class="col">
+                                <button type="submit" class="btn btn-secondary">Send Project Request</button>
+                            </div>
+                        </div>
+                    </form>
+                </div>
+            </div>
+        </div>
     </section>
     <footer class="container-fluid">
         <div id="footer-details" class="row">
@@ -113,3 +133,4 @@
     </footer>
 </body>
 </html>
+
